--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -12,7 +12,7 @@ footer.sector.footer#footer(data-sector='4')
 			.footer__body 
 				.footer__left
 					.footer__logo 
-						img(src="./../../img/icon/logo-fixed.svg", alt="logo")
+						img(src="./img/icon/logo-fixed.svg", alt="logo")
 					.footer__text Дробильно-сортировочное оборудование и комплектующие
 				.footer__right 
 					ul.footer__nav 
