--- a/src/pug/blocks/header.pug
+++ b/src/pug/blocks/header.pug
@@ -3,10 +3,10 @@ header.header
 		.header__top
 			.header__logo
 				a(href="index.html")
-					img(src="./../../img/icon/logo.svg", alt="Лого")
+					img(src="./img/icon/logo.svg", alt="Лого")
 			.header__logo--fixed
 				a(href="index.html")
-					img(src="./../../img/icon/logo-fixed.svg", alt="Лого")
+					img(src="./img/icon/logo-fixed.svg", alt="Лого")
 			ul.header__nav
 				li.header__item
 					a.active(href='index.html#about') О компании
