--- a/src/pug/blocks/images/images--01.pug
+++ b/src/pug/blocks/images/images--01.pug
@@ -2,20 +2,20 @@
 	.images__block-left
 		.images__row 
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/01-144.jpg", alt="img" data-img='1')
+				img.images__img-img(src="./img/equipments/equipment--01/01-144.jpg", alt="img" data-img='1')
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/02-144.jpg", alt="img" data-img='2')
+				img.images__img-img(src="./img/equipments/equipment--01/02-144.jpg", alt="img" data-img='2')
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/03-144.jpg", alt="img" data-img='3')
+				img.images__img-img(src="./img/equipments/equipment--01/03-144.jpg", alt="img" data-img='3')
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/04-144.jpg", alt="img" data-img='4')
+				img.images__img-img(src="./img/equipments/equipment--01/04-144.jpg", alt="img" data-img='4')
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/05-144.jpg", alt="img" data-img='5')
+				img.images__img-img(src="./img/equipments/equipment--01/05-144.jpg", alt="img" data-img='5')
 		.images__row 
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/04-144.jpg", alt="img" data-img='4')
+				img.images__img-img(src="./img/equipments/equipment--01/04-144.jpg", alt="img" data-img='4')
 			.images__img
-				img.images__img-img(src="./../../img/equipments/equipment--01/05-144.jpg", alt="img" data-img='5')
+				img.images__img-img(src="./img/equipments/equipment--01/05-144.jpg", alt="img" data-img='5')
 	.images__block-right
 		.images__img-6
-					img.images__img-put--01(src="./../../img/equipments/equipment--01/01.jpg", alt="img")
+					img.images__img-put--01(src="./img/equipments/equipment--01/01.jpg", alt="img")
