--- a/src/pug/blocks/mobile-nav.pug
+++ b/src/pug/blocks/mobile-nav.pug
@@ -1,6 +1,6 @@
 .mobile-nav
 	a.mobile__logo(href="index.html") 
-		img(src="./../../img/icon/logo-fixed.svg", alt="logo")
+		img(src="./img/icon/logo-fixed.svg", alt="logo")
 	ul.mobile-nav__list 
 		li
 			a.active(href="index.html#about" ).mobile__link О компании
