--- a/src/pug/blocks/slides-benefits/b-slide--02.pug
+++ b/src/pug/blocks/slides-benefits/b-slide--02.pug
@@ -6,4 +6,4 @@
 			.b-slide__img-wrapper
 				.b-slide__number 02
 				.b-slide__img 
-					img(src="./../../../img/benefits/02-s.jpg", alt="")
+					img(src="./img/benefits/02-s.jpg", alt="")
