--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -2,7 +2,7 @@
 	position: relative;
   padding: 168px 0 309px;
 	position: relative;
-	background-image: url(./../../img/about/about-bg.png);
+	background-image: url(./../img/about/about-bg.png);
 }
 
 .about__undertext {
