--- a/src/scss/blocks/_category.scss
+++ b/src/scss/blocks/_category.scss
@@ -122,7 +122,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-01.png);
+    url(./../img/category/c-01.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -133,7 +133,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-02.png);
+    url(./../img/category/c-02.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -144,7 +144,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -157,7 +157,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-02.png);
+    url(./../img/category/c-02.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -167,7 +167,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
 
   backdrop-filter: blur(20px);
   background-size: cover;
@@ -178,7 +178,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-01.png);
+    url(./../img/category/c-01.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -191,7 +191,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -202,7 +202,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -213,7 +213,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-01.png);
+    url(./../img/category/c-01.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -226,7 +226,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-04.png);
+    url(./../img/category/c-04.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -237,7 +237,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -248,7 +248,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-01.png);
+    url(./../img/category/c-01.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -261,7 +261,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-05.png);
+    url(./../img/category/c-05.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -272,7 +272,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-03.png);
+    url(./../img/category/c-03.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
@@ -283,7 +283,7 @@
       rgba(22, 31, 38, 0.3) 0%,
       rgba(22, 31, 38, 0.3) 100%
     ),
-    url(./../../img/category/c-01.png);
+    url(./../img/category/c-01.png);
   backdrop-filter: blur(20px);
   background-size: cover;
 }
