--- a/src/scss/blocks/_slide.scss
+++ b/src/scss/blocks/_slide.scss
@@ -14,7 +14,7 @@
       rgba(22, 31, 38, 0.6) 100%
     ),
     linear-gradient(0deg, rgba(22, 31, 38, 0.4) 0%, rgba(22, 31, 38, 0.4) 100%),
-    url(./../../img/header/slide--01.png);
+    url(./../img/header/slide--01.png);
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -28,7 +28,7 @@
       rgba(22, 31, 38, 0.6) 100%
     ),
     linear-gradient(0deg, rgba(22, 31, 38, 0.4) 0%, rgba(22, 31, 38, 0.4) 100%),
-    url(./../../img/header/slide--02.png);
+    url(./../img/header/slide--02.png);
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
