--- a/src/pug/blocks/images/images--02.pug
+++ b/src/pug/blocks/images/images--02.pug
@@ -2,20 +2,20 @@
 	.images__block-left
 		.images__row 
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/01-144.jpg", alt="img" data-img='6')
+				img.images__img-img( src="./img/equipments/equipment--02/01-144.jpg", alt="img" data-img='6')
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/02-144.jpg", alt="img" data-img='7')
+				img.images__img-img( src="./img/equipments/equipment--02/02-144.jpg", alt="img" data-img='7')
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/03-144.jpg", alt="img" data-img='8')
+				img.images__img-img( src="./img/equipments/equipment--02/03-144.jpg", alt="img" data-img='8')
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/04-144.jpg", alt="img" data-img='9')
+				img.images__img-img( src="./img/equipments/equipment--02/04-144.jpg", alt="img" data-img='9')
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/05-144.jpg", alt="img" data-img='10')
+				img.images__img-img( src="./img/equipments/equipment--02/05-144.jpg", alt="img" data-img='10')
 		.images__row 
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/04-144.jpg", alt="img" data-img='9')
+				img.images__img-img( src="./img/equipments/equipment--02/04-144.jpg", alt="img" data-img='9')
 			.images__img
-				img.images__img-img( src="./../../img/equipments/equipment--02/05-144.jpg", alt="img" data-img='10')
+				img.images__img-img( src="./img/equipments/equipment--02/05-144.jpg", alt="img" data-img='10')
 	.images__block-right
 		.images__img-6
-					img.images__img-put--02(src="./../../img/equipments/equipment--02/6.jpg", alt="img")
+					img.images__img-put--02(src="./img/equipments/equipment--02/6.jpg", alt="img")
