--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -155,7 +155,7 @@
     width: 18px;
     height: 16px;
 
-    background-image: url('./../../img/icon/tel.png');
+    background-image: url('./../img/icon/tel.png');
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -170,7 +170,7 @@
   &::before {
     width: 14px;
     height: 14px;
-    background-image: url('./../../img/icon/tel--fixed.png');
+    background-image: url('./../img/icon/tel--fixed.png');
   }
 }
 
