--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -13,7 +13,7 @@
   padding-bottom: 40px;
   background: #ffffff;
   transition: all 0.2s ease-in;
-  background-image: url(./../../img/about/about-bg.png);
+  background-image: url(./../img/about/about-bg.png);
   background-size: cover;
 }
 
@@ -77,7 +77,7 @@
     margin-right: 8px;
     width: 18px;
     height: 16px;
-    background-image: url(./../../img/icon/tel--fixed.png);
+    background-image: url(./../img/icon/tel--fixed.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
