--- a/src/scss/blocks/_modal-success.scss
+++ b/src/scss/blocks/_modal-success.scss
@@ -49,7 +49,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(./../../img/icon/close.svg);
+    background-image: url(./../img/icon/close.svg);
     background-size: contain;
   }
 }
