--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -85,7 +85,7 @@ a {
     display: block;
     width: 24px;
     height: 24px;
-    background-image: url(./../../img/icon/arrow-btn.svg);
+    background-image: url(./../img/icon/arrow-btn.svg);
   }
 
   &:hover {
@@ -126,7 +126,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(180deg);
-  background-image: url(./../../img/icon/arrow.svg);
+  background-image: url(./../img/icon/arrow.svg);
   border-radius: 50%;
 }
 
@@ -138,7 +138,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: url(./../../img/icon/arrow.svg);
+  background-image: url(./../img/icon/arrow.svg);
   border-radius: 50%;
 }
 
