--- a/src/pug/parts/head.pug
+++ b/src/pug/parts/head.pug
@@ -7,7 +7,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="icon" href="./img/icon/favicon.png")
     link(rel="stylesheet" href="./css/main.css")
-    link(rel="stylesheet" href="./../fonts/CoFoSans/stylesheet.css")
+    link(rel="stylesheet" href="./fonts/CoFoSans/stylesheet.css")
   body
     include ../blocks/modal
     include ../blocks/modal-success
