--- a/src/pug/parts/head.pug
+++ b/src/pug/parts/head.pug
@@ -9,6 +9,7 @@ html(lang="en")
     link(rel="stylesheet" href="./css/main.css")
     link(rel="stylesheet" href="./fonts/CoFoSans/stylesheet.css")
   body
+    include ../blocks/loader
     include ../blocks/modal
     include ../blocks/modal-success
     include ../blocks/header
