--- a/src/pug/blocks/slides-header/slide--01.pug
+++ b/src/pug/blocks/slides-header/slide--01.pug
@@ -1,4 +1,4 @@
-.slide.slide--01
+.slide.slide--01( data-swiper-parallax-duration="2000")
 	.slide__wrapper
-		.slide__title 
-			p Подберем<br /> и привезем
+		.slide__title(data-swiper-parallax-x="150")
+			p(data-swiper-parallax-opacity='0' data-swiper-parallax-scale="0.15" data-swiper-parallax-duration="2000") Подберем<br /> и привезем
