--- a/src/pug/blocks/slides-header/slide--02.pug
+++ b/src/pug/blocks/slides-header/slide--02.pug
@@ -1,7 +1,7 @@
-.slide.slide--02
+.slide.slide--02( data-swiper-parallax-duration="2000")
 	.slide__wrapper
-		.slide__title 
+		.slide__title(data-swiper-parallax-y="150%" data-swiper-parallax-duration="2500")
 			p Подберем<br /> и привезем
-		.slide__desc 
+		.slide__desc(data-swiper-parallax-y="-150%" data-swiper-parallax-duration="2500")
 			h1 Дробильно-сортировочное<br/> оборудование <br/> и комплектующие
 		
