--- a/src/pug/blocks/slides-benefits/b-slide--02.pug
+++ b/src/pug/blocks/slides-benefits/b-slide--02.pug
@@ -1,9 +1,9 @@
 .b-slide.b-slide--02
 	.container
 		.b-slide__wrapper
-			.b-slide__title 
+			.b-slide__title(data-swiper-parallax-y='150%' data-swiper-parallax-duration='2500')
 				p Подготовим<br> предложение</br> за 5 дней
 			.b-slide__img-wrapper
 				.b-slide__number 02
-				.b-slide__img 
+				.b-slide__img(data-swiper-parallax-y='-150%' data-swiper-parallax-duration="2500") 
 					img(src="./img/benefits/02-s.jpg", alt="")
