--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,6 +14,7 @@ body {
   scrollbar-width: thin;
   scrollbar-color: var(--accent) red;
   overflow-x: hidden;
+  // border: 1px solid red;
 
   &::-webkit-scrollbar {
     width: 2px;
